--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -323,6 +323,38 @@
     keywords = {Bayesian belief nets, casual models, multi-criteria decision aid, risk assessment, software metrics},
 }
 
+@inproceedings{NBZ06,
+ author = {Nagappan, Nachiappan and Ball, Thomas and Zeller, Andreas},
+ title = {Mining Metrics to Predict Component Failures},
+ booktitle = {Proceedings of the 28th International Conference on Software Engineering},
+ series = {ICSE '06},
+ year = {2006},
+ isbn = {1-59593-375-1},
+ location = {Shanghai, China},
+ pages = {452--461},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1134285.1134349},
+ doi = {10.1145/1134285.1134349},
+ acmid = {1134349},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {bug database, complexity metrics, empirical study, principal component analysis, regression model},
+}
+
+@article{FN99,
+  author={Fenton, N.E. and Neil, M.},
+  journal={Software Engineering, IEEE Transactions on},
+  title={A critique of software defect prediction models},
+  year={1999},
+  volume={25},
+  number={5},
+  pages={675-689},
+  keywords={belief networks;program testing;software maintenance;software metrics;software quality;software reliability;Bayesian belief networks;holistic models;literature review;multivariate approach;software decomposition;software defect prediction models;software engineering;software maintenance;software metrics;software quality;statistical models;Bayesian methods;Computer Society;Predictive models;Process design;Software maintenance;Software metrics;Software quality;Software systems;Software testing;System testing},
+  doi={10.1109/32.815326},
+  ISSN={0098-5589},
+  month={Sep}
+}
+
 @article{FNMHMKM07,
     title = {Predicting software defects in varying development lifecycles using Bayesian nets},
     journal = {Information and Software Technology},
@@ -336,6 +368,26 @@
     url = {http://www.sciencedirect.com/science/article/pii/S0950584906001194},
     author = {Norman Fenton and Martin Neil and William Marsh and Peter Hearty and David Marquez and Paul Krause and Rajat Mishra},
     keywords = {Causal models, Dynamic Bayesian networks, Software defects, Decision support}
+}
+
+@misc{BBB00,
+  title = {Manifesto for Agile Software Development},
+  author = {Beck, Kent and Beedle, Mike and van Bennekum, Arie and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Grenning, James and Highsmith, Jim and Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Robert C. and Mellor, Steve and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave},
+  year = {2001},
+  url = {http://agilemanifesto.org/},
+  keywords = {agile development manifesto software}
+}
+
+@inproceedings{HH05,
+  author={Hassan, A.E. and Holt, R.C.},
+  booktitle={Software Maintenance, 2005. ICSM'05. Proceedings of the 21st IEEE International Conference on},
+  title={The top ten list: dynamic fault prediction},
+  year={2005},
+  pages={263-272},
+  keywords={software development management;software fault tolerance;FreeBSD;KDE;KOffice;NetBSD;OpenBSD;database management system;dynamic fault prediction;open source project;software development;top ten list;Database systems;Financial management;Operating systems;Productivity;Programming;Project management;Quality management;Resource management;Software development management;Testing},
+  doi={10.1109/ICSM.2005.91},
+  ISSN={1063-6773},
+  month={Sept}
 }
 
 @inproceedings{NB05,
@@ -354,6 +406,21 @@
     author={Halstead, Maurice H},
     year={1977},
     publisher={Elsevier Science Inc.}
+}
+
+@inproceedings{CSM79,
+ author = {Curtis, Bill and Sheppard, Sylvia B. and Milliman, Phil},
+ title = {Third Time Charm: Stronger Prediction of Programmer Performance by Software Complexity Metrics},
+ booktitle = {Proceedings of the 4th International Conference on Software Engineering},
+ series = {ICSE '79},
+ year = {1979},
+ location = {Munich, Germany},
+ pages = {356--360},
+ numpages = {5},
+ url = {http://dl.acm.org/citation.cfm?id=800091.802959},
+ acmid = {802959},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
 }
 
 @article{LH93,
@@ -420,4 +487,195 @@
   pages={322--331},
   year={2011},
   organization={ACM}
+}
+
+@article{GFS05,
+  author={Gyimothy, T. and Ferenc, R. and Siket, I.},
+  journal={Software Engineering, IEEE Transactions on},
+  title={Empirical validation of object-oriented metrics on open source software for fault prediction},
+  year={2005},
+  volume={31},
+  number={10},
+  pages={897-910},
+  keywords={database management systems;fault diagnosis;formal verification;object-oriented methods;object-oriented programming;public domain software;software fault tolerance;software metrics;software quality;Bugzilla bug database;Mozilla;fault prediction;fault-proneness detection;object-oriented metrics;open source Web;open source software;software quality;software reliability;Computer bugs;Computer industry;Electronic mail;Fault detection;Learning systems;Object oriented databases;Open source software;Quality management;Software development management;Software systems;Bugzilla;C++;Columbus.;Index Terms- Fact extraction;Mozilla;compiler wrapping;fault-proneness detection;metrics validation;open source software;reverse engineering},
+  doi={10.1109/TSE.2005.112},
+  ISSN={0098-5589},
+  month={Oct}
+}
+
+@article{T02,
+  title={The economic impacts of inadequate infrastructure for software testing},
+  author={Tassey, Gregory},
+  journal={National Institute of Standards and Technology, RTI Project},
+  volume={7007},
+  number={011},
+  year={2002},
+  publisher={Citeseer}
+}
+
+@inproceedings{ERW10,
+  author={Engstrom, E. and Runeson, P. and Wikstrand, G.},
+  booktitle={Software Testing, Verification and Validation (ICST), 2010 Third International Conference on},
+  title={An Empirical Evaluation of Regression Testing Based on Fix-Cache Recommendations},
+  year={2010},
+  pages={75-78},
+  keywords={embedded systems;program testing;regression analysis;software engineering;embedded system;fault prone files;fix cache recommendation;multimillion LOC product;regression test selection strategy;regression testing empirical evaluation;test case execution;Costs;Embedded system;Fault diagnosis;Iterative methods;Joining processes;Logic testing;Monitoring;Software engineering;Software testing;System testing},
+  doi={10.1109/ICST.2010.40},
+  month={April}
+}
+
+@article{SZZ05,
+ author = {\'{S}liwerski, Jacek and Zimmermann, Thomas and Zeller, Andreas},
+ title = {When Do Changes Induce Fixes?},
+ journal = {SIGSOFT Softw. Eng. Notes},
+ issue_date = {July 2005},
+ volume = {30},
+ number = {4},
+ month = may,
+ year = {2005},
+ issn = {0163-5948},
+ pages = {1--5},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/1082983.1083147},
+ doi = {10.1145/1082983.1083147},
+ acmid = {1083147},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@inproceedings{KZKW06,
+  author={Sunghun Kim and Zimmermann, T. and Kai Pan and Whitehead, E.J.},
+  booktitle={Automated Software Engineering, 2006. ASE '06. 21st IEEE/ACM International Conference on},
+  title={Automatic Identification of Bug-Introducing Changes},
+  year={2006},
+  pages={81-90},
+  keywords={configuration management;graph theory;program debugging;annotation graphs;automatic bug identification;bug fixing;false negatives;false positives;nonsemantic source code changes;outlier fix;software bugs;Computer bugs;Computer industry;Electrical equipment industry;Fixtures;History;Inspection;Open source software;Project management;Risk analysis;Software debugging},
+  doi={10.1109/ASE.2006.23},
+  ISSN={1938-4300},
+  month={Sept}
+}
+
+@inproceedings{SLLZW11,
+ author = {Sadowski, Caitlin and Lewis, Chris and Lin, Zhongpeng and Zhu, Xiaoyan and Whitehead,Jr., E. James},
+ title = {An Empirical Analysis of the FixCache Algorithm},
+ booktitle = {Proceedings of the 8th Working Conference on Mining Software Repositories},
+ series = {MSR '11},
+ year = {2011},
+ isbn = {978-1-4503-0574-7},
+ location = {Waikiki, Honolulu, HI, USA},
+ pages = {219--222},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1985441.1985475},
+ doi = {10.1145/1985441.1985475},
+ acmid = {1985475},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {fixcache, software bug prediction},
+}
+
+@inproceedings{WFGWW09,
+  author={Wikstrand, G. and Feldt, R. and Gorantla, J.K. and Wang Zhe and White, C.},
+  booktitle={Software Testing Verification and Validation, 2009. ICST '09. International Conference on},
+  title={Dynamic Regression Test Selection Based on a File Cache An Industrial Evaluation},
+  year={2009},
+  pages={299-302},
+  keywords={cache storage;regression analysis;cache hit rates;dynamic regression test selection;fault-prone files;file cache;industrial evaluation;real-time software system;Automatic testing;Computer industry;Costs;Maintenance;Monitoring;Real time systems;Software safety;Software systems;Software testing;System testing;Case study;Industrial evaluation;Regression testing},
+  doi={10.1109/ICST.2009.42},
+  month={April}
+}
+
+@inproceedings{A79,
+  title={Measuring application development productivity},
+  author={Albrecht, Allan J},
+  booktitle={Proceedings of the Joint SHARE/GUIDE/IBM Application Development Symposium},
+  volume={10},
+  pages={83--92},
+  year={1979}
+}
+
+@inproceedings{TKC99,
+  author={Mei-Huei Tang and Ming-Hung Kao and Mei-Hwa Chen},
+  booktitle={Software Metrics Symposium, 1999. Proceedings. Sixth International},
+  title={An empirical study on object-oriented metrics},
+  year={1999},
+  pages={242-249},
+  keywords={object-oriented programming;program testing;real-time systems;software metrics;industrial real-time systems;object management faults;object oriented faults;object oriented testing;object-oriented design metrics;program testing;Costs;Electrical capacitance tomography;Encapsulation;Fault detection;Hip;Independent component analysis;Microwave integrated circuits;Performance evaluation;Software metrics;Testing},
+  doi={10.1109/METRIC.1999.809745},
+  month={}
+}
+
+@article{OEGQ07,
+  author={Olague, H.M. and Etzkorn, L.H. and Gholston, S. and Quattlebaum, S.},
+  journal={Software Engineering, IEEE Transactions on},
+  title={Empirical Validation of Three Software Metrics Suites to Predict Fault-Proneness of Object-Oriented Classes Developed Using Highly Iterative or Agile Software Development Processes},
+  year={2007},
+  volume={33},
+  number={6},
+  pages={402-419},
+  keywords={Java;object-oriented programming;regression analysis;software metrics;software quality;JavaScript;agile software development process;fault-prone prediction;iterative software development process;multivariate binary logistic regression model;object-oriented class;object-oriented design;software metrics;software quality;statistical analysis;Computer industry;Java;Logistics;Mood;Object oriented modeling;Open source software;Programming;Software maintenance;Software metrics;Software quality;Object-oriented software metrics;object-oriented metrics;software maintenance programming;software quality metrics;software reuse.},
+  doi={10.1109/TSE.2007.1015},
+  ISSN={0098-5589},
+  month={June}
+}
+
+@article{SC93,
+ author = {Sharble, Robert C. and Cohen, Samuel S.},
+ title = {The Object-oriented Brewery: A Comparison of Two Object-oriented Development Methods},
+ journal = {SIGSOFT Softw. Eng. Notes},
+ issue_date = {April 1993},
+ volume = {18},
+ number = {2},
+ month = apr,
+ year = {1993},
+ issn = {0163-5948},
+ pages = {60--73},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/159420.155839},
+ doi = {10.1145/159420.155839},
+ acmid = {155839},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{FN99-2,
+  title = "Software metrics: successes, failures and new directions ",
+  journal = "Journal of Systems and Software ",
+  volume = "47",
+  number = "2–3",
+  pages = "149 - 157",
+  year = "1999",
+  note = "",
+  issn = "0164-1212",
+  doi = "http://dx.doi.org/10.1016/S0164-1212(99)00035-7",
+  url = "http://www.sciencedirect.com/science/article/pii/S0164121299000357",
+  author = "Norman E Fenton and Martin Neil"
+}
+
+@inproceedings{LLL08,
+ author = {Lincke, R\"{u}diger and Lundberg, Jonas and L\"{o}we, Welf},
+ title = {Comparing Software Metrics Tools},
+ booktitle = {Proceedings of the 2008 International Symposium on Software Testing and Analysis},
+ series = {ISSTA '08},
+ year = {2008},
+ isbn = {978-1-60558-050-0},
+ location = {Seattle, WA, USA},
+ pages = {131--142},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1390630.1390648},
+ doi = {10.1145/1390630.1390648},
+ acmid = {1390648},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {comparing tools, software quality metrics},
+}
+
+@inproceedings{SS10,
+  author={Sfetsos, Panagiotis and Stamelos, I.},
+  booktitle={Quality of Information and Communications Technology (QUATIC), 2010 Seventh International Conference on the},
+  title={Empirical Studies on Quality in Agile Practices: A Systematic Literature Review},
+  year={2010},
+  pages={44-53},
+  keywords={program testing;software prototyping;software quality;agile practices;pair programming;product quality;systematic literature Review;test first development;Book reviews;IEC standards;ISO standards;Measurement;Programming;Software;Systematics;ISO/IEC 12207;ISO/IEC 9126;agile methods;agile practices;empirical studies;pair programming;quality;systematic literature review;test-driven development;test-first development},
+  doi={10.1109/QUATIC.2010.17},
+  month={Sept}
 }
