More fine-tuning

--- a/kandi/kandidaatintutkielma.tex
+++ b/kandi/kandidaatintutkielma.tex
@@ -143,17 +143,17 @@ Yhdenkään metriikan ei ole kuitenkaan osoitettu olevan merkittävästi muita p
 
 Ohjelmisto on kokonaisuus, jonka muodostavat sovelluksen lähdekoodi, prosessit, dokumentaatio ja ohjelmiston käyttämä tieto, jotka liittyvät ja joita tarvitaan järjestelmän toimintaan~\cite{IEEE90, ISO9000}. Elinkaarensa aikana ohjelmiston on sopeuduttava muutoksiin, joita aiheutuu muun muassa uusien vaatimuksien, muuttuvan ympäristön ja korjausta vaativien virheiden seurauksena. Muutokset ohjelmistoon ovat väistämättömiä ja siksi niihin tulee varautua. Ohjelmiston toiminnallisuuden toteuttamiseen on usein monia ratkaisumalleja, eikä sopivimman ratkaisun valitseminen ole helppo tehtävä~\cite{CK94}. Varsinkin jälkikäteen tehtävät muutokset ovat usein vaikeita ja tekevät ohjelmistokehityksestä haastavaa.
 
-Ohjelmiston koon kasvaessa se monimutkaistuu ja kykymme ymmärtää sen toteutusta vähenee. Toteutuksen osalta tulisikin pyrkiä yksinkertaisuuteen, sillä yksinkertainen toteutus on helpommin ymmärrettävissä. Yksinkertainen toteutus sisältää myös tyypillisesti vähemmän virheitä, sillä kehittäjien on helpompi ymmärtää sitä. Julkaistuun tuotteeseen päätyvien virheiden vähentämiseksi on kehitetty erilaisia laadunvalvontamenetelmiä. Laadunvalvontamenetelmät kuten koodikatselmukset ja testaus ovat tehokkaita välineitä virheiden etsimiseen ennen julkaisua. Valitettavasti menetelmät vievät paljon työaikaa, joka taas on pois muista tehtävistä.
+Ohjelmiston koon kasvaessa se monimutkaistuu ja kykymme ymmärtää sen toteutusta vähenee. Toteutuksen osalta tulisikin pyrkiä yksinkertaisuuteen, sillä yksinkertainen toteutus on helpommin ymmärrettävissä. Yksinkertainen toteutus sisältää myös tyypillisesti vähemmän virheitä, sillä kehittäjien on helpompi ymmärtää sitä. Ohjelmiston laadullinen arviointi tuotantovaiheessa on tärkeää, sillä virheiden korjaaminen jälkikäteen on paitsi vaikeampaa myös kalliimpaa~\cite{T02}. Tämän seurauksena suuri osa ohjelmistoprojektien budjeteista kuluu ohjelmiston ylläpitovaiheeseen~\cite{CALO94, G83}, jolloin julkaistuun tuotteeseen päätyviä virheitä korjataan.
 
-Ohjelmiston virheherkkien osa-alueiden automaattisesta paikantamisesta ja ennustamisesta on kaavailtu ratkaisua edellä mainittuun laadunvalvonnalliseen ongelmaan. Tämä mahdollistaisi resurssien paremman kohdentamisen, sillä laadunvalvonta ja testaus voitaisiin keskittää erityisesti ohjelmiston ongelmia aiheuttaviin osiin. Ohjelmistosta virheitä etsiviä automaattisia laadunvalvonnan menetelmiä kutsutaan yleisesti ohjelmistometriikoiksi.
+Julkaistuun tuotteeseen päätyvien virheiden vähentämiseksi on kehitetty erilaisia laadunvalvontamenetelmiä. Laadunvalvontamenetelmät kuten koodikatselmukset ja testaus ovat tehokkaita välineitä virheiden etsimiseen ennen julkaisua. Valitettavasti menetelmät vievät paljon työaikaa, joka taas on pois muista tehtävistä. Ohjelmiston virheherkkien osa-alueiden automaattisesta paikantamisesta ja ennustamisesta on kaavailtu ratkaisua edellä mainittuun laadunvalvonnalliseen ongelmaan. Tämä mahdollistaisi resurssien paremman kohdentamisen, sillä laadunvalvonta ja testaus voitaisiin keskittää erityisesti ohjelmiston ongelmia aiheuttaviin osiin. Ohjelmistosta virheitä etsiviä automaattisia laadunvalvonnan menetelmiä kutsutaan yleisesti ohjelmistometriikoiksi.
 
 Erilaisia ohjelmistometriikoita on esitetty kirjallisuudessa lukuisia~\cite{M76, H77, CK94, GKMS00, ZN08} ja niitä on tutkittu käytännössä koko ohjelmistoteollisuuden olemassaolon ajan. Ohjelmistometriikat koostuvat joukosta automatisoitavia menetelmiä, jotka pyrkivät arvioimaan ohjelmiston toteutuksen monimutkaisuutta, muodostamaan arvioita virheiden määrästä ja paikantamaan virheherkkiä ohjelmiston osia. Lisäksi metriikoiden tuottamaa tietoa voidaan käyttää tuotantoprosessin arviointiin ja tukena tuotannon päätöksenteossa.
 
-Ohjelmiston laadullinen arviointi tuotantovaiheessa on tärkeää, sillä virheiden korjaaminen jälkikäteen on paitsi vaikeampaa myös kalliimpaa~\cite{T02}. Tämän seurauksena suuri osa ohjelmistoprojektien budjeteista kuluu ohjelmiston ylläpitovaiheeseen~\cite{CALO94, G83}, jolloin julkaistuun tuotteeseen päätyviä virheitä korjataan.
+Ohjelmistometriikoiden automaattisen luonteen ansiosta metriikoilla on potentiaali toimia ohjelmiston laadunvalvonnan tukena. Ohjelmistometriikoiden tuloksien avulla voidaan työläimpiä laadunvalvontamenetelmiä, kuten testausta ja koodikatselmuksia, kohdentaa paremmin. Keskittämällä laadunvalvontamenetelmät ohjelmiston virheherkimpiin osiin, voidaan ohjelmiston yleistä laatua parantaa kasvattamatta kehittäjien ja testaajien työmäärää.
 
-Perinteiset ohjelmiston monimutkaisuutta ja virhetiheyttä mittaavat metriikat ovat viime vuosina saaneet rinnalleen kokonaisvaltaisia metriikoita. Kokonaisvaltaiset metriikat rakentuvat perinteisten metriikoiden varaan, mutta ottavat lisäksi huomioon epävarmuustekijöitä ja syy-seuraussuhteita~\cite{FNMHMKM07}. Kokonaisvaltaiset metriikat pyrkivät vastaamaan paremmin myös kysymyksiin tuotantoprosessin tehokkuudesta. Toinen uusi ohjelmistometriikoiden tyylisuunta on ohjelmiston muutoksia tietyllä aikavälillä seuraavat ohjelmistometriikat~\cite{NB05, ME98, KZWZ07}.
+Tässä tutkielmassa esitellään erilaisten ohjelmistometriikoiden toimintaa ja niiden käytettävyyttä ohjelmistotuotannon laadun arvioinnissa. Valitut metriikat ovat kaikki kirjallisuudessa yleisesti toimiviksi osoitettuja ohjelmistometriikoita ja edustavat kattavasti ohjelmistometriikoiden eri tyylisuuntia. Tutkielmassa arvioidaan paitsi ohjelmistometriikoiden kykyä arvioida ohjelmiston laatua myös metriikoiden yleistä käytettävyyttä ohjelmistotuotannossa.
 
-Tässä tutkielmassa esitellään erilaisia ohjelmistometriikoita ja niiden kykyä arvioida ohjelmiston laatua. Kappaleessa kaksi käydään läpi ohjelmiston laatutekijöitä ja tapoja arvioida ohjelmiston laatua. Kolmannessa kappaleessa esittelen erilaisia ohjelmistometriikoita. Ohjelmistometriikoista käydään läpi oliopohjaiseen suunnitteluun tarkoitetut CK-metriikat~\cite{CK91, CK94} sekä ohjelmiston muutokseen perustuvat suhteellinen koodikirnu (Relative code churn)~\cite{NB05} ja virhevälimuisti (bug cache)~\cite{KZWZ07} -metriikat. Valitut ohjelmistometriikat ovat kaikki kirjallisuudessa yleisesti toimiviksi osoitettuja ohjelmistometriikoita ja edustavat kattavasti ohjelmistometriikoiden eri tyylisuuntia. Neljännessä kappaleessa esitellään metriikoista tehtyjä johtopäätöksiä ja niiden luotettavuuteen vaikuttavia tekijöitä.
+Tutkielman rakenne on seuraavanlainen. Kappaleessa kaksi käydään läpi ohjelmiston laatutekijöitä ja tapoja arvioida ohjelmiston laatua. Kolmannessa kappaleessa esitellään erilaisia kirjallisuudessa esiteltyjen ohjelmistometriikoiden toimintaa ja niiden kykyä arvioida ohjelmiston laatua. Ohjelmistometriikoista käydään läpi oliopohjaiseen suunnitteluun tarkoitetut CK-metriikat~\cite{CK91, CK94} sekä ohjelmiston muutokseen perustuvat suhteellinen koodikirnu (Relative code churn)~\cite{NB05} ja virhevälimuisti (bug cache)~\cite{KZWZ07} -metriikat. Neljännessä kappaleessa kootaan yhteen johtopäätöksiä metriikoista ja niiden luotettavuuteen vaikuttavista tekijöistä.
 
 \section{Ohjelmiston laadun arviointi}
 
@@ -173,6 +173,8 @@ Ohjelmistometriikoita on tutkittu käytännössä yhtä kauan kuin ohjelmistoja 
 
 Ohjelmistometriikat voidaan jakaa karkeasti itse ohjelmistoa (Software Product) mittaaviin ja ohjelmistotuotantoprosessia (Software Process) mittaaviin metriikoihin~\cite{LH93}. Ohjelmistoa mittaavat metriikat tarjoavat laskennallisen arvion ohjelmiston monimutkaisuudesta ja pyrkivät paikantamaan ohjelmiston virheherkkiä osia lukemalla lähdekoodia ja suunnitteludokumentteja. Ohjelmistotuotantoprosessia arvioivat metriikat keskittyvät vastaamaan tuotannollisiin kysymyksiin. Ne arvioivat tuotannon tehokkuutta ja vaadittavaa työmäärää tuotannon eri vaiheissa. Ohjelmistotuotantoprosessia mittaavat metriikat pyrkivät erityisesti olemaan tukena päätöksenteossa kun taas ohjelmistoa mittaavat metriikat pyrkivät auttamaan ohjelmiston laadunvalvonnassa.
 
+Perinteiset ohjelmiston monimutkaisuutta ja virhetiheyttä mittaavat metriikat ovat viime vuosina saaneet rinnalleen kokonaisvaltaisia metriikoita. Kokonaisvaltaiset metriikat rakentuvat perinteisten metriikoiden varaan, mutta ottavat lisäksi huomioon epävarmuustekijöitä ja syy-seuraussuhteita~\cite{FNMHMKM07}. Kokonaisvaltaiset metriikat pyrkivät vastaamaan paremmin myös kysymyksiin tuotantoprosessin tehokkuudesta. Toinen uusi ohjelmistometriikoiden tyylisuunta on ohjelmiston muutoksia tietyllä aikavälillä seuraavat ohjelmistometriikat~\cite{NB05, ME98, KZWZ07}.
+
 Ohjelmiston muutokseen perustuvat tekniikat ottavat hieman erilaisen lähtökohdan perinteisiin metriikoihin nähden. Ohjelmiston elinkaaren aikana kaikki siihen tehtävät muutokset eivät suinkaan ole seurausta korjatuista virheistä. Uusien ominaisuuksien lisääminen tai muuttuviin vaatimusmääreisiin vastaaminen, tarkoittaa usein kokonaan uuden koodin lisäämistä ohjelmistoon. Lisäysten mukana ohjelmistoon saattaa tulla myös uusia virheitä, varsinkin jos kehittäjä ei täysin ymmärrä alkuperäistä toteutusta. Hiljattain lisätty lähdekoodi on yleensä vähemmän testattua ja siten käytössä olleeseen koodiin verrattuna sisältää todennäköisemmin virheitä~\cite{ME98}. Tutkielmassa esiintyvät koodikirnu ja virhevälimuisti edustavat muutokseen perustuvia ohjelmistometriikoita.
 
 \subsection{Perinteiset metriikat}
@@ -187,15 +189,15 @@ McCabe havaitsi, että ohjelmiston fyysinen koko ei yksinään ole riittävän t
 
 Oliopohjaisen ohjelmistosuunnittelun yleistyessä 1980-luvun loppupuolella havaittiin, että perinteiset ohjelmistometriikat eivät sovellu oliopohjaiseen ohjelmistosuunnitteluun. Perinteiset metriikat eivät ottaneet huomioon oliopohjaiselle suunnittelulle tyypillisiä ominaispiirteitä~\cite{LH93, CK94}. Oliopohjaiselle ohjelmoinnille tyypillisiä ominaispiirteitä, kuten olioita, luokkia, perintää tai olioiden välistä kommunikaatioita ei esiinny proseduraalisessa ohjelmoinnissa. Oli siis olemassa tarve erityisesti oliopohjaista suunnittelua varten kehitetyille ohjelmistometriikoille. Oliopohjaisia ohjelmistometriikoita on olemassa useita~\cite{LH93, SC93}, mutta tässä tutkielmassa keskitymme Chidamberin ja Kemererin esittämiin niin sanottuihin CK-metriikoihin.
 
-Chidamber ja Kemerer esittivät joukon olio-ohjelmointiin suunniteltuja ohjelmistometriikoita~\cite{CK91, CK94}. He kritisoivat, että aikaisemmilta metriikoilta puuttuu täsmällinen teoreettinen ja matemaattinen pohja. Oliopohjaisen suunnittelun perustaksi Chidamber ja Kemerer valitsivat Grady Boochin määritelmän~\cite{B94}. Määritelmän mukaan oliopohjaisessa suunnittelussa on neljä tärkeää askelta.
+Chidamber ja Kemerer esittivät joukon olio-ohjelmointiin suunniteltuja ohjelmistometriikoita~\cite{CK91, CK94}. He kritisoivat, että aikaisemmilta metriikoilta puuttuu täsmällinen teoreettinen ja matemaattinen pohja. Oliopohjaisen suunnittelun perustaksi Chidamber ja Kemerer valitsivat Grady Boochin määritelmän~\cite{B94}. Määritelmän mukaan oliopohjaisessa suunnittelussa on neljä tärkeää askelta:
 \begin{enumerate}
   \item Luokkien ja olioiden tunnistaminen (Identification of Classes), jossa ongelmakenttä mallinnetaan luokiksi ja olioiksi.
   \item Merkityksen tunnistaminen (Identify the Semantics), jossa määritellään edellisessä askeleessa muodostettujen luokkien elinkaari.
   \item Riippuvuuksien tunnistaminen (Indentify Relationships), jossa määritellään luokkien väliset riippuvuudet kuten perintä ja näkyvyydet.
   \item Luokkien implementaatio (Implementation of Classes), jossa määritellään luokkien sisäinen rakenne.
-\end{enumerate}
+\end{enumerate}\newpage
 
-Oliopohjaisen suunnitelun määritelmien pohjalle Chidamberin ja Kemererin kehittivät kuusi oliopohjaista suunnittelua arvioivaa mittaria.
+Oliopohjaisen suunnitelun määritelmien pohjalle Chidamberin ja Kemererin kehittivät kuusi oliopohjaista suunnittelua arvioivaa mittaria:
 
 \begin{enumerate}
   \item \textbf{Painotettu luokan metodien määrä} (Weighted Methods per Class, WMC)
@@ -251,7 +253,7 @@ Absoluuttisten mittareiden pohjalle Nagappan ja Ball ovat kehittäneet kahdeksan
       Muokattujen koodirivien suuri määrä suhteessa koodirivien kokonaismäärään ennakoi suurta virhetiheyttä (Defect density) ohjelmistossa.
     \item \textbf{Poistettujen koodirivien kokonaismäärä / Koodirivien kokonaismäärä}
 
-      Poistettujen koodirivien suuri määrä suhteessa koodirivien kokonaismäärään ennakoi suurta virhetiheyttä ohjelmistossa.
+      Poistettujen koodirivien suuri määrä suhteessa koodirivien kokonaismäärään ennakoi suurta virhetiheyttä ohjelmistossa.\newpage
     \item \textbf{Muokattujen tiedostojen kokonaismäärä / Tiedostojen kokonaismäärä}
 
       Muokattujen tiedostojen suuri määrä suhteessa tiedostojen kokonaismäärään kasvattaa sen todennäköisyyttä, että muokatut tiedostot lisäävät uusia virheitä ohjelmistoon. Esimerkiksi jos ohjelmiston osat A ja B koostuvat molemmat kymmenestä tiedostosta ja osan A:n tiedostoista viittä on muokattu ja osan B tiedostoista vain kahta on muokattu, on todennäköistä että A sisältää enemmän virheitä kuin B.
@@ -328,9 +330,9 @@ Koodikirnun tietojen keruu perustuu täysin versionhallintasovelluksen tarjoamaa
 
 Virhevälimuistin käyttöönoton työläyteen ja tulosten luotettavuuteen vaikuttavat suuresti käytössä oleva versionhallintajärjestelmä sekä kehittäjien käytänteet~\cite{SLLZW11}. Vaikka virheitä korjanneiden muutosten löytämiseen on kehitetty automaattisia menetelmiä~\cite{SZZ05, KZKW06}, saattaa virheitä korjaavien muokkausten erottelu vaatia huomattavaa manuaalista työtä. Tehtävä helpottuu huomattavasti, mikäli kehittäjillä on käytössään yhdessä sovitut käytänteet virheenkorjausten merkitsemiseksi. Virhevälimuistin tehokkuuteen vaikuttaa myös olemassa olevan virhetiedon laatu. Joissakin tapauksissa vain 40-60 prosenttia virhetietokannassa listatuista virheistä voitiin huomioida~\cite{KZWZ07}.
 
-Välimuisti alustetaan tyypillisesti ohjelmiston fyysisesti suurimmilla tiedostoilla~\cite{KZWZ07}. Mikäli tällöin tarkastellaan ohjelmiston ongelmakohtia vain tiedostotasolla, saa välimuisti paljon osumia, mutta välimuistin sisältämien tiedostojen lähdekoodin määrä on huomattavan suuri. Metriikan tulosten käyttäminen resurssien parempaan kohdentamiseen on tällöin vaikeaa. Välimuistin alustaminen ei kuitenkaan ole pakollista ja tutkimuksissa alustamisen vaikutuksen on havaittu olevan mitätön~\cite{WFGWW09}. Mikäli välimuisti on kooltaan liian pieni, heikkenee metriikan tehokkuus sillä välimuisti ei saa riittävästi osumia.
+Välimuisti alustetaan tyypillisesti ohjelmiston fyysisesti suurimmilla tiedostoilla~\cite{KZWZ07}. Mikäli tällöin tarkastellaan ohjelmiston ongelmakohtia vain tiedostotasolla, saa välimuisti paljon osumia, mutta välimuistin sisältämien tiedostojen lähdekoodin määrä on huomattavan suuri. Metriikan tulosten käyttäminen resurssien parempaan kohdentamiseen on tällöin vaikeaa. Välimuistin alustaminen ei kuitenkaan ole pakollista ja tutkimuksissa alustamisen vaikutuksen on havaittu olevan mitätön~\cite{WFGWW09}.
 
-Virhevälimuistin tehokkuuteen vaikuttaa myös välimuistin koko. Välimuistin liian suuri koko romuttaa virhevälimuistin tehokkuuden ja liian pieni välimuisti ei havaitse riittävästi virheherkkiä ohjelmiston osia. Useissa tutkimuksissa on käytetty välimuistin viitteellisenä kokona 10 prosenttia ohjelmistoprojektin koosta~\cite{SLLZW11, KZWZ07}. Myös välimuistin päivitysstrategialla on merkitystä. On tärkeää, että vanhat välimuistiosumat eivät pidä tiedostoja välimuistissa liian pitkään. Parhaan mahdollisen tuloksen saamiseksi tekijät kuitenkin suosittelevat kokeilemaan erilaisia strategioita välimuistin päivittämiseen~\cite{}. Lisäksi kokeilemalla eri arvoja paikallisuuden kriteerien parametreille, voidaan metriikan luotettavuutta parantaa projektikohtaisesti.
+Virhevälimuistin tehokkuuteen vaikuttaa myös välimuistin koko. Välimuistin liian suuri koko romuttaa virhevälimuistin tehokkuuden ja liian pieni välimuisti ei havaitse riittävästi virheherkkiä ohjelmiston osia. Useissa tutkimuksissa on käytetty välimuistin viitteellisenä kokona 10 prosenttia ohjelmistoprojektin koosta~\cite{SLLZW11, KZWZ07}. Myös välimuistin päivitysstrategialla on merkitystä. On tärkeää, että vanhat välimuistiosumat eivät pidä tiedostoja välimuistissa liian pitkään. Parhaan mahdollisen tuloksen saamiseksi tekijät kuitenkin suosittelevat kokeilemaan erilaisia strategioita välimuistin päivittämiseen~\cite{KZWZ07}. Lisäksi kokeilemalla eri arvoja paikallisuuden kriteerien parametreille, voidaan metriikan luotettavuutta parantaa projektikohtaisesti.
 
 \subsection{Johtopäätökset ohjelmistometriikoista}
 
@@ -344,7 +346,7 @@ CK-metriikoiden on osoitettu sisältävän toivottuja ominaisuuksia oliopohjaise
 
 \subsubsection{Johtopäätökset koodikirnusta}
 
-Nagappan ja Bell tutkivat Windows Server 2003 ja Windows Server 2003 Service Pack 1 -ohjelmistotuotteiden osalta koodikirnun kykyä arvioida ohjelmiston laatua. He havaitsivat, että useasti muuttuva lähdekoodi sisältää enemmän virheitä kuin vähemmän samalla ajanjaksolla muuttuva lähdekoodi. Nagappan ja Bell tekivät tutkimuksen perusteella seuraavat neljä johtopäätöstä~\cite{NB05}.
+Nagappan ja Bell tutkivat Windows Server 2003 ja Windows Server 2003 Service Pack 1 -ohjelmistotuotteiden osalta koodikirnun kykyä arvioida ohjelmiston laatua. He havaitsivat, että useasti muuttuva lähdekoodi sisältää enemmän virheitä kuin vähemmän samalla ajanjaksolla muuttuva lähdekoodi. Nagappan ja Bell tekivät tutkimuksen perusteella seuraavat neljä johtopäätöstä~\cite{NB05}:
 
 \begin{itemize}
     \item Suhteellisen koodikirnun mittareiden kasvu korreloi ohjelmiston virhetiheyden kasvun kanssa.
